crates/ruff_python_parser/tests/snapshots/invalid_syntax@re_lexing__line_continuation_windows_eol.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/re_lexing/line_continuation_windows_eol.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            13,
        ),
        range: 0..46,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        8,
                    ),
                    range: 0..10,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                7,
                            ),
                            range: 0..10,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..10,
                                node_index: NodeIndex(
                                    6,
                                ),
                                args: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                3,
                                            ),
                                            range: 5..6,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                5,
                                            ),
                                            range: 8..9,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 26..46,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("bar"),
                        range: 30..33,
                        node_index: NodeIndex(
                            9,
                        ),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 33..35,
                        node_index: NodeIndex(
                            10,
                        ),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(
                                    11,
                                ),
                                range: 42..46,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(a, b, # comment \
  |                       ^ Syntax Error: Expected ')', found newline
2 |
3 | def bar():
4 |     pass
  |
